--- a/MD/一年蓬.md
+++ b/MD/一年蓬.md
@@ -38,7 +38,7 @@
 **备注:** 2009年6月15日摄于西北大学北校区校篮球场。
 
 
-![一年蓬](https://raw.githubusercontent.com/zhilongjia/NWU/master/JPG/一年蓬 (1).JPG) 
+![一年蓬](../JPG/一年蓬 (1).JPG) 
 
-![一年蓬](https://raw.githubusercontent.com/zhilongjia/NWU/master/JPG/一年蓬.JPG) 
+![一年蓬](../JPG/一年蓬.JPG) 
 
