--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ description: "西北大学校园网络植物志."
 
 # 项目简介
 
-![西北大学校园网络植物志](./JPG/nwu.gif)
+![西北大学校园网络植物志](JPG/NWU.png)
 
 本网页隶属于西北大学校级大学生创新性实验计划项目，项目编号（校200827） 项目由2008年6月申请，2008年9月项目启动，截至2009年9月提前计划3个月按合同书要求完成 任务。
 
